Some intial setup changes

--- a/_includes/components/footer.njk
+++ b/_includes/components/footer.njk
@@ -1,5 +1,5 @@
 <footer>
   <small>
-    This project based on the Eleventy Netlify Boilerplate by <a href="https://www.danurbanowicz.com">Dan Urbanowicz</a>.
+    By Alan Huxley, made with love, for all the Huxleys &copy; 2020
   </small>
 </footer>
