--- a/_includes/assets/css/inline.css
+++ b/_includes/assets/css/inline.css
@@ -15,7 +15,7 @@ html,
 body {
     padding: 0;
     margin: 0;
-    font-family: "Avenir", "Avenir Next", -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
+    font-family: 'Quicksand', "Avenir", "Avenir Next", -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
 }
 
 body {
@@ -23,6 +23,7 @@ body {
     height: 100vh;
     grid-template-rows: auto 1fr auto;
     background-color: var(--white);
+    color: var(--black);
 }
 
 p,
@@ -42,15 +43,14 @@ a[href]:not(:hover) {
 
 header,
 footer {
-    padding: 1em;
+    padding: 1.5em;
     text-align: center;
 }
 
 main {
-    padding: 1em;
+    padding: 1.5em;
     padding-bottom: 2em;
     width: 100%;
-    max-width: 37.5em;
     margin: 0 auto;
 }
 
@@ -77,12 +77,17 @@ pre {
 }
 
 /* Header Logo (style as h2) */
-header>em {
+header>h1 {
     display: block;
-    font-size: 2em;
-    margin: .67em 0;
+    font-size: 2.5em;
+    margin: 0;
     font-weight: bold;
     font-style: normal;
+    text-align: left;
+}
+
+header>h1 a {
+    text-decoration: none !important;
 }
 
 /* Header Nav */
@@ -213,217 +218,133 @@ button {
     }
 }
 
-/* People grid */
-
-.person {
+/* House layout */
+.house {
+    width: 100%;
     position: relative;
 }
 
-.person h2 {
+.house img {
+    width: 100%;
+}
+
+/* Click points */
+.pano-point {
     position: absolute;
-    bottom: 0.5em;
-    left: 0.5em;
-    color: var(--white);
-    text-shadow: 1px 1px var(--blue);
-    margin: 0;
-}
-
-.person img {
-    width: 100%;
-    display: block;
-}
-
-
-/* GLIDE core css*/
-.glide {
-    position: relative;
-    width: 100%;
-    box-sizing: border-box
-}
-
-.glide * {
-    box-sizing: inherit
-}
-
-.glide__track {
-    overflow: hidden
-}
-
-.glide__slides {
-    position: relative;
-    width: 100%;
-    list-style: none;
-    backface-visibility: hidden;
-    transform-style: preserve-3d;
-    touch-action: pan-Y;
-    overflow: hidden;
-    padding: 0;
-    white-space: nowrap;
-    display: flex;
-    flex-wrap: nowrap;
-    will-change: transform
-}
-
-.glide__slides--dragging {
-    user-select: none
-}
-
-.glide__slide {
-    width: 100%;
-    height: 100%;
-    flex-shrink: 0;
-    white-space: normal;
-    user-select: none;
-    -webkit-touch-callout: none;
-    -webkit-tap-highlight-color: transparent
-}
-
-.glide__slide a {
-    user-select: none;
-    -webkit-user-drag: none;
-    -moz-user-select: none;
-    -ms-user-select: none
-}
-
-.glide__arrows {
-    -webkit-touch-callout: none;
-    user-select: none
-}
-
-.glide__bullets {
-    -webkit-touch-callout: none;
-    user-select: none
-}
-
-.glide--rtl {
-    direction: rtl
-}
-
-/* Glide theme css */
-.glide__arrow {
-    position: absolute;
-    display: block;
-    top: 35%;
-    z-index: 2;
-    color: white;
-    text-transform: uppercase;
-    padding: 9px 12px;
-    background-color: var(--blue);
-    border: 2px solid rgba(255, 255, 255, 1);
+    width: 20px;
+    height: 20px;
     border-radius: 50%;
-    box-shadow: 0 0.25em 0.5em 0 rgba(0, 0, 0, 0.1);
-    text-shadow: 0 0.25em 0.5em rgba(0, 0, 0, 0.1);
+    background: #6464F0;
+    border: 2px solid #000000;
+    /*text-indent: -9000em;*/
+}
+
+.livingRoom {
+    top: 1em;
+    left: 1em;
+}
+.kitchen {
+    top: 5em;
+    left: 9em;
+}
+
+/**
+ * Tooltip Styles
+ */
+
+/* Base styles for the element that has a tooltip */
+[data-tooltip],
+.tooltip {
+    position: absolute;
+    cursor: pointer;
+}
+
+/* Base styles for the entire tooltip */
+[data-tooltip]:before,
+[data-tooltip]:after,
+.tooltip:before,
+.tooltip:after {
+    position: absolute;
+    visibility: hidden;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+    opacity: 0;
+    -webkit-transition:
+        opacity 0.2s ease-in-out,
+        visibility 0.2s ease-in-out,
+        -webkit-transform 0.2s cubic-bezier(0.71, 1.7, 0.77, 1.24);
+    -moz-transition:
+        opacity 0.2s ease-in-out,
+        visibility 0.2s ease-in-out,
+        -moz-transform 0.2s cubic-bezier(0.71, 1.7, 0.77, 1.24);
+    transition:
+        opacity 0.2s ease-in-out,
+        visibility 0.2s ease-in-out,
+        transform 0.2s cubic-bezier(0.71, 1.7, 0.77, 1.24);
+    -webkit-transform: translate3d(0, 0, 0);
+    -moz-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+    pointer-events: none;
+}
+
+/* Show the entire tooltip on hover and focus */
+[data-tooltip]:hover:before,
+[data-tooltip]:hover:after,
+[data-tooltip]:focus:before,
+[data-tooltip]:focus:after,
+.tooltip:hover:before,
+.tooltip:hover:after,
+.tooltip:focus:before,
+.tooltip:focus:after {
+    visibility: visible;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
     opacity: 1;
-    cursor: pointer;
-    transition: opacity 150ms ease, border 300ms ease-in-out;
-    transform: translateY(-50%);
-    line-height: 1
 }
 
-.glide__arrow:focus {
-    outline: none
+/* Base styles for the tooltip's directional arrow */
+.tooltip:before,
+[data-tooltip]:before {
+    z-index: 1001;
+    border: 6px solid transparent;
+    background: transparent;
+    content: "";
 }
 
-.glide__arrow:hover {
-    border-color: white
+/* Base styles for the tooltip's content area */
+.tooltip:after,
+[data-tooltip]:after {
+    z-index: 1000;
+    padding: 8px;
+    width: 160px;
+    background-color: #000;
+    background-color: hsla(0, 0%, 20%, 0.9);
+    color: #fff;
+    content: attr(data-tooltip);
+    font-size: 14px;
+    line-height: 1.2;
 }
 
-.glide__arrow--left {
-    left: 0;
-    transform: translateX(-50%);
+/* Top (default) */
+[data-tooltip]:before,
+.tooltip:before,
+.tooltip-top:before {
+  bottom: 170%;
+  left: 50%;
 }
 
-.glide__arrow--right {
-    right: 0;
-    transform: translateX(50%);
+[data-tooltip]:after,
+.tooltip:after,
+.tooltip-top:after {
+  bottom: 170%;
+  left: -50%;
 }
 
-.glide__arrow--disabled {
-    opacity: 0.33
-}
-
-.glide__bullets {
-    position: absolute;
-    z-index: 2;
-    bottom: 2em;
-    left: 50%;
-    display: inline-flex;
-    list-style: none;
-    transform: translateX(-50%)
-}
-
-.glide__bullet {
-    background-color: rgba(255, 255, 255, 0.5);
-    width: 9px;
-    height: 9px;
-    padding: 0;
-    border-radius: 50%;
-    border: 2px solid transparent;
-    transition: all 300ms ease-in-out;
-    cursor: pointer;
-    line-height: 0;
-    box-shadow: 0 0.25em 0.5em 0 rgba(0, 0, 0, 0.1);
-    margin: 0 0.25em
-}
-
-.glide__bullet:focus {
-    outline: none
-}
-
-.glide__bullet:hover,
-.glide__bullet:focus {
-    border: 2px solid white;
-    background-color: rgba(255, 255, 255, 0.5)
-}
-
-.glide__bullet--active {
-    background-color: white
-}
-
-.glide--swipeable {
-    cursor: grab;
-    cursor: -moz-grab;
-    cursor: -webkit-grab
-}
-
-.glide--dragging {
-    cursor: grabbing;
-    cursor: -moz-grabbing;
-    cursor: -webkit-grabbing
-}
-
-.glide__slide {
-    position: relative;
-    text-align: center;
-}
-
-/* Custom carousel styles */
-
-.glide__slide img {
-    width: 100%;
-    height: auto;
-}
-
-.glide__slide h2,
-.glide__slide p,
-.glide__slide .btn {
-    position: absolute;
-    color: #ffffff;
-    text-align: center;
-}
-
-.glide__slide h2 {
-    bottom: 82px;
-    width: 100%;
-}
-
-.glide__slide p {
-    bottom: 60px;
-    width: 100%;
-}
-
-.glide__slide .btn {
-    bottom: 20px;
-    left: 50%;
-    transform: translateX(-50%);
+[data-tooltip]:before,
+.tooltip:before,
+.tooltip-top:before {
+  margin-left: -6px;
+  margin-bottom: -12px;
+  border-top-color: #000;
+  border-top-color: hsla(0, 0%, 20%, 0.9);
 }
