--- a/_includes/components/footer.njk
+++ b/_includes/components/footer.njk
@@ -1,5 +1,5 @@
 <footer>
   <small>
-    By Alan Huxley, made with love, for all the Huxleys &copy; 2020
+    By Alan Huxley, made with love &copy; 2020
   </small>
 </footer>
