--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -6,9 +6,9 @@
 	<body>
 
 		<header>
-			<em>
-				<a href="{{ '/' | url }}">{{ metadata.title }}</a>
-			</em>
+			<h1>
+				{{ metadata.title }}
+			</h1>
 		</header>
 
 		<main>
