--- a/_includes/assets/css/inline.css
+++ b/_includes/assets/css/inline.css
@@ -316,7 +316,9 @@ button {
 [data-tooltip]:after {
     z-index: 1000;
     padding: 8px;
-    width: 160px;
+    width: auto;
+    min-width: 140px;
+    text-align: center;
     background-color: #000;
     background-color: hsla(0, 0%, 20%, 0.9);
     color: #fff;
@@ -347,4 +349,68 @@ button {
   margin-bottom: -12px;
   border-top-color: #000;
   border-top-color: hsla(0, 0%, 20%, 0.9);
+}
+
+/* Unopened lightbox */
+.lightbox {
+  display: none;
+}
+
+/* Opened lightbox */
+.lightbox:target {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* Lightbox content */
+.lightbox span {
+  width: 90%;
+  height: 90%;
+  position: relative;
+}
+
+.lightbox iframe {
+  position: relative;
+}
+
+/* Close button */
+.lightbox .close {
+  position: relative;
+  display: block;
+}
+
+.lightbox .close::after {
+  right: -1rem;
+  top: -1rem;
+  width: 2rem;
+  height: 2rem;
+  position: absolute;
+  display: flex;
+  z-index: 1;
+  justify-content: center;
+  background-color: black;
+  border-radius: 50%;
+  color: white;
+  content: "×";
+  cursor: pointer;
+  line-height: 28px;
+  font-size: 32px;
+}
+
+/* Lightbox overlay */
+.lightbox .close::before {
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  background-color: rgba(0,0,0,.7);
+  content: "";
+  cursor: default;
 }
