--- a/_includes/layouts/home.njk
+++ b/_includes/layouts/home.njk
@@ -5,11 +5,23 @@ section: home
 
 <div class="house floor1">
 	<img src="static/img/delineo-_web_banners_deliver.webp" alt="">
-	<a href="#" data-tooltip="Living room" class="pano-point livingRoom"></a>
-	<a href="#" data-tooltip="Kitchen" class="pano-point kitchen"></a>
-
-	<iframe width="100%" height="480px" src="https://poly.google.com/view/6kZo0HjevLU/embed?chrome=min" frameborder="0" style="border:none;" allowvr="yes" allow="vr; xr; accelerometer; magnetometer; gyroscope; autoplay;" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="" ></iframe>
+	<a href="#livingRoom" data-tooltip="Living room" class="pano-point livingRoom"></a>
+	<a href="#kitchen" data-tooltip="Kitchen" class="pano-point kitchen"></a>
 </div>
+
+<div class="lightbox" id="livingRoom">
+	<span>
+		<a href="#" class="close"></a>
+		<iframe width="100%" height="100%" src="https://poly.google.com/view/6kZo0HjevLU/embed" frameborder="0" style="border:none;" allowvr="yes" allow="vr; xr; accelerometer; magnetometer; gyroscope; autoplay;" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="" ></iframe>
+	</span>
+</div>
+<div class="lightbox" id="kitchen">
+	<span>
+		<a href="#" class="close"></a>
+		<iframe width="100%" height="100%" src="https://poly.google.com/view/0QGwh1u5m3H/embed?chrome=min" frameborder="0" style="border:none;" allowvr="yes" allow="vr; xr; accelerometer; magnetometer; gyroscope; autoplay;" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="" ></iframe>
+	</span>
+</div>
+
 
 {{ layoutContent | safe }}
 
