--- a/_includes/assets/css/inline.css
+++ b/_includes/assets/css/inline.css
@@ -1,8 +1,9 @@
 :root {
     --turkey: #FFF0EB;
     --white: white;
-    --blue: #077a7a;
-    --black: #323e48;
+    --blue: #e0e9ee;
+    --black: #5e6765;
+    --grey: #a0aaab;
 }
 
 *,
@@ -15,7 +16,7 @@ html,
 body {
     padding: 0;
     margin: 0;
-    font-family: 'Quicksand', "Avenir", "Avenir Next", -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
+    font-family: 'Dancing Script', cursive;
 }
 
 body {
@@ -23,7 +24,7 @@ body {
     height: 100vh;
     grid-template-rows: auto 1fr auto;
     background-color: var(--white);
-    color: var(--black);
+    color: var(--grey);
 }
 
 p,
@@ -43,13 +44,20 @@ a[href]:not(:hover) {
 
 header,
 footer {
-    padding: 1.5em;
+    padding: 1em;
     text-align: center;
 }
 
+header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
 main {
-    padding: 1.5em;
-    padding-bottom: 2em;
+    padding: 0 1em 1em;
+    padding-bottom: 0.5em;
     width: 100%;
     margin: 0 auto;
 }
@@ -79,11 +87,12 @@ pre {
 /* Header Logo (style as h2) */
 header>h1 {
     display: block;
-    font-size: 2.5em;
-    margin: 0;
+    width: 100%;
+    font-size: 3em;
+    margin: 0 0 0.25em 0;
     font-weight: bold;
     font-style: normal;
-    text-align: left;
+    text-align: center;
 }
 
 header>h1 a {
@@ -112,6 +121,10 @@ header nav li a[href]:not(:hover) {
 header nav li a[data-current="current item"] {
     font-weight: 700;
     text-decoration: underline;
+}
+
+.controls {
+    text-align: left;
 }
 
 /* Posts List */
@@ -170,10 +183,10 @@ input,
 textarea,
 button {
     width: auto;
-    padding: 1em;
-    margin-bottom: 1em;
-    font-size: 1rem;
-    font-family: "Avenir", "Avenir Next", sans-serif;
+    padding: 0.5em 1em;
+    margin-bottom: 0.2em;
+    font-size: 0.9rem;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 input,
@@ -184,23 +197,21 @@ textarea {
 button {
     border: 1px solid var(--blue);
     background-color: var(--blue);
-    color: var(--white);
+    color: var(--black);
     cursor: pointer;
+    transition: all 0.1s;
 }
 
-@media screen and (min-width:768px) {
-    :root {
-        font-size: 1.1rem;
-    }
+button:hover {
+    border: 1px solid var(--grey);
+    background-color: var(--grey);
+    color: var(--white);
 }
 
-.btn {
-    display: inline-block;
-    padding: 8px 15px;
-    background: #ffffff;
-    color: var(--blue) !important;
-    text-decoration: none !important;
-    width: auto;
+button:focus {
+    border-radius: 0;
+    outline: 0;
+    border: 1px solid var(--grey);;
 }
 
 /* Col classes */
@@ -208,14 +219,6 @@ button {
     width: 100%;
     display: grid;
     grid-template-columns: 1fr;
-}
-
-@media screen and (min-width:480px) {
-    .col2 {
-        width: 100%;
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-    }
 }
 
 /* House layout */
@@ -226,8 +229,14 @@ button {
 
 .house model-viewer {
     width: 100%;
-    height: 80vh;
+    height: 65vh;
     border: 0;
+}
+
+.house model-viewer:focus,
+.house .userInput:focus,
+.house .container:focus {
+    outline: none;
 }
 
 /* Click points */
@@ -359,7 +368,7 @@ button {
     border-radius: 4px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
     color: rgba(0, 0, 0, 0.8);
-    display: block;
+    display: none;
     font-family: Futura, Helvetica Neue, sans-serif;
     font-size: 18px;
     font-weight: 700;
@@ -376,4 +385,53 @@ button {
     pointer-events: none;
     transform: translateY(calc(-50% + 4px));
     transition: transform 0.3s, opacity 0.3s;
+}
+
+.Hotspot:hover .HotspotAnnotation {
+    display: block;
+}
+
+.Hotspot {
+    display: none;
+}
+
+.Hotspot.visible {
+    display: block;
+}
+
+@media screen and (min-width:480px) {
+    .col2 {
+        width: 100%;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media screen and (min-width:767px) {
+    header,
+    footer {
+        padding: 1.5em;
+    }
+    main {
+        padding: 0 1.5em 1.5em;
+    }
+    header {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        flex-wrap: wrap;
+    }
+
+    header>h1 {
+        font-size: 4.5em;
+        width: auto;
+        margin: 0 0.5em 0 0;
+    }
+    .house model-viewer {
+        height: 72vh;
+    }
+
+    :root {
+        font-size: 1.1rem;
+    }
 }
